[gd_scene load_steps=15 format=2]

[ext_resource path="res://levels/farm/farm.gd" type="Script" id=1]
[ext_resource path="res://levels/common/assets/barrels_etc/barrels_and_stuff.tres" type="TileSet" id=2]
[ext_resource path="res://levels/prison/TileMap.gd" type="Script" id=3]
[ext_resource path="res://levels/city/assets/village04-512-x-256_002.png" type="Texture" id=4]
[ext_resource path="res://levels/farm/sky1.png" type="Texture" id=5]
[ext_resource path="res://levels/city/assets/village04-512-x-256_005.png" type="Texture" id=6]
[ext_resource path="res://levels/common/assets/grass_and_stone/light_green/light_green.tres" type="TileSet" id=7]
[ext_resource path="res://entities/player/Player.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/npc/OldMan.tscn" type="PackedScene" id=9]
[ext_resource path="res://entities/npc/OldMan.gd" type="Script" id=10]
[ext_resource path="res://ui/popupDialog/PopupDialog.tscn" type="PackedScene" id=11]
[ext_resource path="res://levels/farm/NextLevelArea.gd" type="Script" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 41.663

[sub_resource type="RectangleShape2D" id=2]

[node name="World" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 7.28613, 406.499 )
__meta__ = {
"_edit_lock_": true
}

[node name="barrels_and_rope" type="TileMap" parent="Background"]
modulate = Color( 0.546875, 0.451779, 0.388794, 1 )
position = Vector2( -7.28613, -406.499 )
z_index = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 1, 1 )
format = 1
tile_data = PoolIntArray( 6226069, 5, 0, 6553747, 4, 0, 49480865, 5, 0, 51053068, 1, 0, 52036801, 4, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="torches" type="TileMap" parent="Background"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 2, 2 )
format = 1
tile_data = PoolIntArray( 11993666, 3, 0, 12058872, 3, 0 )
script = ExtResource( 3 )

[node name="Houses" type="Sprite" parent="Background"]
position = Vector2( 744.714, 323.501 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="Sprite" parent="Background"]
modulate = Color( 0.847656, 0.597121, 0.354294, 1 )
position = Vector2( 879.33, 78.8969 )
z_index = -9
texture = ExtResource( 5 )

[node name="Trees" type="Node2D" parent="Background"]
editor/display_folded = true
position = Vector2( 528.119, 231.32 )

[node name="tree1" type="Sprite" parent="Background/Trees"]
position = Vector2( -246, 93 )
texture = ExtResource( 6 )

[node name="tree2" type="Sprite" parent="Background/Trees"]
position = Vector2( 934, 93 )
texture = ExtResource( 6 )

[node name="Plattforms" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 8.28613, 406.499 )
__meta__ = {
"_edit_lock_": true
}

[node name="GrassAndStone_bottom" type="TileMap" parent="Plattforms"]
modulate = Color( 0.617188, 0.617188, 0.617188, 1 )
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 851968, 27, 0, 852076, 27, 0, 917504, 27, 0, 917612, 27, 0, 983040, 27, 0, 983148, 27, 0, 1048576, 27, 0, 1048684, 27, 0, 1114112, 27, 0, 1114220, 27, 0, 1179648, 27, 0, 1179756, 27, 0, 1245184, 27, 0, 1245292, 27, 0, 1310720, 27, 0, 1310828, 27, 0, 1376256, 27, 0, 1376364, 27, 0, 1441792, 27, 0, 1441900, 27, 0, 1507328, 27, 0, 1507436, 27, 0, 1572864, 27, 0, 1572972, 27, 0, 1638400, 27, 0, 1638401, 41, 0, 1638402, 41, 0, 1638403, 41, 0, 1638404, 41, 0, 1638405, 41, 0, 1638406, 41, 0, 1638407, 41, 0, 1638408, 41, 0, 1638409, 41, 0, 1638410, 41, 0, 1638411, 41, 0, 1638412, 41, 0, 1638413, 41, 0, 1638414, 41, 0, 1638415, 41, 0, 1638416, 41, 0, 1638417, 41, 0, 1638418, 41, 0, 1638419, 41, 0, 1638420, 41, 0, 1638421, 41, 0, 1638422, 41, 0, 1638423, 41, 0, 1638424, 41, 0, 1638425, 41, 0, 1638426, 41, 0, 1638427, 41, 0, 1638428, 41, 0, 1638429, 41, 0, 1638430, 41, 0, 1638431, 41, 0, 1638432, 41, 0, 1638433, 41, 0, 1638434, 41, 0, 1638435, 41, 0, 1638436, 41, 0, 1638437, 41, 0, 1638438, 41, 0, 1638439, 41, 0, 1638440, 41, 0, 1638441, 41, 0, 1638442, 41, 0, 1638443, 41, 0, 1638444, 41, 0, 1638445, 41, 0, 1638446, 41, 0, 1638447, 41, 0, 1638448, 41, 0, 1638449, 41, 0, 1638450, 41, 0, 1638451, 41, 0, 1638452, 41, 0, 1638453, 41, 0, 1638454, 8, 0, 1638455, 8, 0, 1638456, 8, 0, 1638457, 8, 0, 1638458, 8, 0, 1638459, 8, 0, 1638460, 8, 0, 1638461, 8, 0, 1638462, 8, 0, 1638463, 8, 0, 1638464, 8, 0, 1638465, 8, 0, 1638466, 8, 0, 1638467, 8, 0, 1638468, 8, 0, 1638469, 8, 0, 1638470, 8, 0, 1638471, 8, 0, 1638472, 8, 0, 1638473, 8, 0, 1638474, 8, 0, 1638475, 8, 0, 1638476, 8, 0, 1638477, 8, 0, 1638478, 8, 0, 1638479, 8, 0, 1638480, 8, 0, 1638481, 8, 0, 1638482, 8, 0, 1638483, 8, 0, 1638484, 8, 0, 1638485, 8, 0, 1638486, 8, 0, 1638487, 8, 0, 1638488, 8, 0, 1638489, 8, 0, 1638490, 8, 0, 1638491, 8, 0, 1638492, 8, 0, 1638493, 8, 0, 1638494, 8, 0, 1638495, 8, 0, 1638496, 8, 0, 1638497, 8, 0, 1638498, 8, 0, 1638499, 8, 0, 1638500, 8, 0, 1638501, 8, 0, 1638502, 8, 0, 1638503, 8, 0, 1638504, 8, 0, 1638505, 8, 0, 1638506, 8, 0, 1638507, 8, 0, 1638508, 27, 0, 1703936, 27, 0, 1703937, 34, 0, 1703938, 34, 0, 1703939, 34, 0, 1703940, 34, 0, 1703941, 34, 0, 1703942, 34, 0, 1703943, 34, 0, 1703944, 34, 0, 1703945, 34, 0, 1703946, 34, 0, 1703947, 34, 0, 1703948, 34, 0, 1703949, 34, 0, 1703950, 34, 0, 1703951, 34, 0, 1703952, 34, 0, 1703953, 34, 0, 1703954, 34, 0, 1703955, 34, 0, 1703956, 34, 0, 1703957, 34, 0, 1703958, 34, 0, 1703959, 34, 0, 1703960, 34, 0, 1703961, 34, 0, 1703962, 34, 0, 1703963, 34, 0, 1703964, 34, 0, 1703965, 34, 0, 1703966, 34, 0, 1703967, 34, 0, 1703968, 34, 0, 1703969, 34, 0, 1703970, 34, 0, 1703971, 34, 0, 1703972, 34, 0, 1703973, 34, 0, 1703974, 34, 0, 1703975, 34, 0, 1703976, 34, 0, 1703977, 34, 0, 1703978, 34, 0, 1703979, 34, 0, 1703980, 34, 0, 1703981, 34, 0, 1703982, 34, 0, 1703983, 34, 0, 1703984, 34, 0, 1703985, 34, 0, 1703986, 34, 0, 1703987, 34, 0, 1703988, 34, 0, 1703989, 34, 0, 1703990, 34, 0, 1703991, 34, 0, 1703992, 34, 0, 1703993, 34, 0, 1703994, 34, 0, 1703995, 34, 0, 1703996, 34, 0, 1703997, 34, 0, 1703998, 34, 0, 1703999, 34, 0, 1704000, 34, 0, 1704001, 34, 0, 1704002, 34, 0, 1704003, 34, 0, 1704004, 34, 0, 1704005, 34, 0, 1704006, 34, 0, 1704007, 34, 0, 1704008, 34, 0, 1704009, 34, 0, 1704010, 34, 0, 1704011, 34, 0, 1704012, 34, 0, 1704013, 34, 0, 1704014, 34, 0, 1704015, 34, 0, 1704016, 34, 0, 1704017, 34, 0, 1704018, 34, 0, 1704019, 34, 0, 1704020, 34, 0, 1704021, 34, 0, 1704022, 34, 0, 1704023, 34, 0, 1704024, 34, 0, 1704025, 34, 0, 1704026, 34, 0, 1704027, 34, 0, 1704028, 34, 0, 1704029, 34, 0, 1704030, 34, 0, 1704031, 34, 0, 1704032, 34, 0, 1704033, 34, 0, 1704034, 34, 0, 1704035, 34, 0, 1704036, 34, 0, 1704037, 34, 0, 1704038, 34, 0, 1704039, 34, 0, 1704040, 34, 0, 1704041, 34, 0, 1704042, 34, 0, 1704043, 34, 0, 1704044, 27, 0, 1769472, 27, 0, 1769473, 27, 0, 1769474, 27, 0, 1769475, 32, 0, 1769476, 27, 0, 1769477, 27, 0, 1769478, 27, 0, 1769479, 27, 0, 1769480, 27, 0, 1769481, 27, 0, 1769482, 27, 0, 1769483, 27, 0, 1769484, 27, 0, 1769485, 27, 0, 1769486, 27, 0, 1769487, 27, 0, 1769488, 27, 0, 1769489, 27, 0, 1769490, 27, 0, 1769491, 27, 0, 1769492, 27, 0, 1769493, 27, 0, 1769494, 27, 0, 1769495, 27, 0, 1769496, 27, 0, 1769497, 27, 0, 1769498, 27, 0, 1769499, 27, 0, 1769500, 27, 0, 1769501, 27, 0, 1769502, 27, 0, 1769503, 27, 0, 1769504, 27, 0, 1769505, 27, 0, 1769506, 27, 0, 1769507, 27, 0, 1769508, 27, 0, 1769509, 27, 0, 1769510, 27, 0, 1769511, 27, 0, 1769512, 27, 0, 1769513, 27, 0, 1769514, 27, 0, 1769515, 27, 0, 1769516, 27, 0, 1769517, 27, 0, 1769518, 27, 0, 1769519, 27, 0, 1769520, 27, 0, 1769521, 27, 0, 1769522, 27, 0, 1769523, 27, 0, 1769524, 27, 0, 1769525, 27, 0, 1769526, 27, 0, 1769527, 27, 0, 1769528, 27, 0, 1769529, 27, 0, 1769530, 27, 0, 1769531, 27, 0, 1769532, 27, 0, 1769533, 27, 0, 1769534, 27, 0, 1769535, 27, 0, 1769536, 27, 0, 1769537, 27, 0, 1769538, 27, 0, 1769539, 27, 0, 1769540, 27, 0, 1769541, 27, 0, 1769542, 27, 0, 1769543, 27, 0, 1769544, 27, 0, 1769545, 27, 0, 1769546, 27, 0, 1769547, 27, 0, 1769548, 27, 0, 1769549, 27, 0, 1769550, 27, 0, 1769551, 27, 0, 1769552, 27, 0, 1769553, 27, 0, 1769554, 27, 0, 1769555, 27, 0, 1769556, 27, 0, 1769557, 27, 0, 1769558, 27, 0, 1769559, 27, 0, 1769560, 27, 0, 1769561, 27, 0, 1769562, 27, 0, 1769563, 27, 0, 1769564, 27, 0, 1769565, 27, 0, 1769566, 27, 0, 1769567, 27, 0, 1769568, 27, 0, 1769569, 27, 0, 1769570, 27, 0, 1769571, 27, 0, 1769572, 27, 0, 1769573, 27, 0, 1769574, 27, 0, 1769575, 27, 0, 1769576, 27, 0, 1769577, 27, 0, 1769578, 27, 0, 1769579, 27, 0, 1769580, 27, 0, 1835008, 27, 0, 1835009, 27, 0, 1835010, 27, 0, 1835011, 27, 0, 1835012, 27, 0, 1835013, 27, 0, 1835014, 27, 0, 1835015, 27, 0, 1835016, 27, 0, 1835017, 27, 0, 1835018, 27, 0, 1835019, 27, 0, 1835020, 27, 0, 1835021, 27, 0, 1835022, 27, 0, 1835023, 27, 0, 1835024, 27, 0, 1835025, 27, 0, 1835026, 27, 0, 1835027, 27, 0, 1835028, 27, 0, 1835029, 27, 0, 1835030, 27, 0, 1835031, 27, 0, 1835032, 27, 0, 1835033, 27, 0, 1835034, 27, 0, 1835035, 27, 0, 1835036, 27, 0, 1835037, 27, 0, 1835038, 27, 0, 1835039, 27, 0, 1835040, 27, 0, 1835041, 27, 0, 1835042, 27, 0, 1835043, 27, 0, 1835044, 27, 0, 1835045, 27, 0, 1835046, 27, 0, 1835047, 27, 0, 1835048, 27, 0, 1835049, 27, 0, 1835050, 27, 0, 1835051, 27, 0, 1835052, 27, 0, 1835053, 27, 0, 1835054, 27, 0, 1835055, 27, 0, 1835056, 27, 0, 1835057, 27, 0, 1835058, 27, 0, 1835059, 27, 0, 1835060, 27, 0, 1835061, 27, 0, 1835062, 27, 0, 1835063, 27, 0, 1835064, 27, 0, 1835065, 27, 0, 1835066, 27, 0, 1835067, 27, 0, 1835068, 27, 0, 1835069, 27, 0, 1835070, 27, 0, 1835071, 27, 0, 1835072, 27, 0, 1835073, 27, 0, 1835074, 27, 0, 1835075, 27, 0, 1835076, 27, 0, 1835077, 27, 0, 1835078, 27, 0, 1835079, 27, 0, 1835080, 27, 0, 1835081, 27, 0, 1835082, 27, 0, 1835083, 27, 0, 1835084, 27, 0, 1835085, 27, 0, 1835086, 27, 0, 1835087, 27, 0, 1835088, 27, 0, 1835089, 27, 0, 1835090, 27, 0, 1835091, 27, 0, 1835092, 27, 0, 1835093, 27, 0, 1835094, 27, 0, 1835095, 27, 0, 1835096, 27, 0, 1835097, 27, 0, 1835098, 27, 0, 1835099, 27, 0, 1835100, 27, 0, 1835101, 27, 0, 1835102, 27, 0, 1835103, 27, 0, 1835104, 27, 0, 1835105, 27, 0, 1835106, 27, 0, 1835107, 27, 0, 1835108, 27, 0, 1835109, 27, 0, 1835110, 27, 0, 1835111, 27, 0, 1835112, 27, 0, 1835113, 27, 0, 1835114, 27, 0, 1835115, 27, 0, 1835116, 27, 0, 1900544, 27, 0, 1900545, 27, 0, 1900546, 27, 0, 1900547, 27, 0, 1900548, 27, 0, 1900549, 27, 0, 1900550, 27, 0, 1900551, 27, 0, 1900552, 27, 0, 1900553, 27, 0, 1900554, 27, 0, 1900555, 27, 0, 1900556, 27, 0, 1900557, 27, 0, 1900558, 27, 0, 1900559, 27, 0, 1900560, 27, 0, 1900561, 27, 0, 1900562, 27, 0, 1900563, 27, 0, 1900564, 27, 0, 1900565, 27, 0, 1900566, 27, 0, 1900567, 27, 0, 1900568, 27, 0, 1900569, 27, 0, 1900570, 27, 0, 1900571, 27, 0, 1900572, 27, 0, 1900573, 27, 0, 1900574, 27, 0, 1900575, 27, 0, 1900576, 27, 0, 1900577, 27, 0, 1900578, 27, 0, 1900579, 27, 0, 1900580, 27, 0, 1900581, 27, 0, 1900582, 27, 0, 1900583, 27, 0, 1900584, 27, 0, 1900585, 27, 0, 1900586, 27, 0, 1900587, 27, 0, 1900588, 27, 0, 1900589, 27, 0, 1900590, 27, 0, 1900591, 27, 0, 1900592, 27, 0, 1900593, 27, 0, 1900594, 27, 0, 1900595, 27, 0, 1900596, 27, 0, 1900597, 27, 0, 1900598, 27, 0, 1900599, 27, 0, 1900600, 27, 0, 1900601, 27, 0, 1900602, 27, 0, 1900603, 27, 0, 1900604, 27, 0, 1900605, 27, 0, 1900606, 27, 0, 1900607, 27, 0, 1900608, 27, 0, 1900609, 27, 0, 1900610, 27, 0, 1900611, 27, 0, 1900612, 27, 0, 1900613, 27, 0, 1900614, 27, 0, 1900615, 27, 0, 1900616, 27, 0, 1900617, 27, 0, 1900618, 27, 0, 1900619, 27, 0, 1900620, 27, 0, 1900621, 27, 0, 1900622, 27, 0, 1900623, 27, 0, 1900624, 27, 0, 1900625, 27, 0, 1900626, 27, 0, 1900627, 27, 0, 1900628, 27, 0, 1900629, 27, 0, 1900630, 27, 0, 1900631, 27, 0, 1900632, 27, 0, 1900633, 27, 0, 1900634, 27, 0, 1900635, 27, 0, 1900636, 27, 0, 1900637, 27, 0, 1900638, 27, 0, 1900639, 27, 0, 1900640, 27, 0, 1900641, 27, 0, 1900642, 27, 0, 1900643, 27, 0, 1900644, 27, 0, 1900645, 27, 0, 1900646, 27, 0, 1900647, 27, 0, 1900648, 27, 0, 1900649, 27, 0, 1900650, 27, 0, 1900651, 27, 0, 1900652, 27, 0, 1966080, 27, 0, 1966081, 27, 0, 1966082, 27, 0, 1966083, 27, 0, 1966084, 27, 0, 1966085, 27, 0, 1966086, 27, 0, 1966087, 27, 0, 1966088, 27, 0, 1966089, 27, 0, 1966090, 27, 0, 1966091, 27, 0, 1966092, 27, 0, 1966093, 27, 0, 1966094, 27, 0, 1966095, 27, 0, 1966096, 27, 0, 1966097, 27, 0, 1966098, 27, 0, 1966099, 27, 0, 1966100, 27, 0, 1966101, 27, 0, 1966102, 27, 0, 1966103, 27, 0, 1966104, 27, 0, 1966105, 27, 0, 1966106, 27, 0, 1966107, 27, 0, 1966108, 27, 0, 1966109, 27, 0, 1966110, 27, 0, 1966111, 27, 0, 1966112, 27, 0, 1966113, 27, 0, 1966114, 27, 0, 1966115, 27, 0, 1966116, 27, 0, 1966117, 27, 0, 1966118, 27, 0, 1966119, 27, 0, 1966120, 27, 0, 1966121, 27, 0, 1966122, 27, 0, 1966123, 27, 0, 1966124, 27, 0, 1966125, 27, 0, 1966126, 27, 0, 1966127, 27, 0, 1966128, 27, 0, 1966129, 27, 0, 1966130, 27, 0, 1966131, 27, 0, 1966132, 27, 0, 1966133, 27, 0, 1966134, 27, 0, 1966135, 27, 0, 1966136, 27, 0, 1966137, 27, 0, 1966138, 27, 0, 1966139, 27, 0, 1966140, 27, 0, 1966141, 27, 0, 1966142, 27, 0, 1966143, 27, 0, 1966144, 27, 0, 1966145, 27, 0, 1966146, 27, 0, 1966147, 27, 0, 1966148, 27, 0, 1966149, 27, 0, 1966150, 27, 0, 1966151, 27, 0, 1966152, 27, 0, 1966153, 27, 0, 1966154, 27, 0, 1966155, 27, 0, 1966156, 27, 0, 1966157, 27, 0, 1966158, 27, 0, 1966159, 27, 0, 1966160, 27, 0, 1966161, 27, 0, 1966162, 27, 0, 1966163, 27, 0, 1966164, 27, 0, 1966165, 27, 0, 1966166, 27, 0, 1966167, 27, 0, 1966168, 27, 0, 1966169, 27, 0, 1966170, 27, 0, 1966171, 27, 0, 1966172, 27, 0, 1966173, 27, 0, 1966174, 27, 0, 1966175, 27, 0, 1966176, 27, 0, 1966177, 27, 0, 1966178, 27, 0, 1966179, 27, 0, 1966180, 27, 0, 1966181, 27, 0, 1966182, 27, 0, 1966183, 27, 0, 1966184, 27, 0, 1966185, 27, 0, 1966186, 27, 0, 1966187, 27, 0, 1966188, 27, 0, 2031616, 27, 0, 2031617, 27, 0, 2031618, 27, 0, 2031619, 27, 0, 2031620, 27, 0, 2031621, 27, 0, 2031622, 27, 0, 2031623, 27, 0, 2031624, 27, 0, 2031625, 27, 0, 2031626, 27, 0, 2031627, 27, 0, 2031628, 27, 0, 2031629, 27, 0, 2031630, 27, 0, 2031631, 27, 0, 2031632, 27, 0, 2031633, 27, 0, 2031634, 27, 0, 2031635, 27, 0, 2031636, 27, 0, 2031637, 27, 0, 2031638, 27, 0, 2031639, 27, 0, 2031640, 27, 0, 2031641, 27, 0, 2031642, 27, 0, 2031643, 27, 0, 2031644, 27, 0, 2031645, 27, 0, 2031646, 27, 0, 2031647, 27, 0, 2031648, 27, 0, 2031649, 27, 0, 2031650, 27, 0, 2031651, 27, 0, 2031652, 27, 0, 2031653, 27, 0, 2031654, 27, 0, 2031655, 27, 0, 2031656, 27, 0, 2031657, 27, 0, 2031658, 27, 0, 2031659, 27, 0, 2031660, 27, 0, 2031661, 27, 0, 2031662, 27, 0, 2031663, 27, 0, 2031664, 27, 0, 2031665, 27, 0, 2031666, 27, 0, 2031667, 27, 0, 2031668, 27, 0, 2031669, 27, 0, 2031670, 27, 0, 2031671, 27, 0, 2031672, 27, 0, 2031673, 27, 0, 2031674, 27, 0, 2031675, 27, 0, 2031676, 27, 0, 2031677, 27, 0, 2031678, 27, 0, 2031679, 27, 0, 2031680, 27, 0, 2031681, 27, 0, 2031682, 27, 0, 2031683, 27, 0, 2031684, 27, 0, 2031685, 27, 0, 2031686, 27, 0, 2031687, 27, 0, 2031688, 27, 0, 2031689, 27, 0, 2031690, 27, 0, 2031691, 27, 0, 2031692, 27, 0, 2031693, 27, 0, 2031694, 27, 0, 2031695, 27, 0, 2031696, 27, 0, 2031697, 27, 0, 2031698, 27, 0, 2031699, 27, 0, 2031700, 27, 0, 2031701, 27, 0, 2031702, 27, 0, 2031703, 27, 0, 2031704, 27, 0, 2031705, 27, 0, 2031706, 27, 0, 2031707, 27, 0, 2031708, 27, 0, 2031709, 27, 0, 2031710, 27, 0, 2031711, 27, 0, 2031712, 27, 0, 2031713, 27, 0, 2031714, 27, 0, 2031715, 27, 0, 2031716, 27, 0, 2031717, 27, 0, 2031718, 27, 0, 2031719, 27, 0, 2031720, 27, 0, 2031721, 27, 0, 2031722, 27, 0, 2031723, 27, 0, 2031724, 27, 0, 2097152, 27, 0, 2097153, 27, 0, 2097154, 27, 0, 2097155, 27, 0, 2097156, 27, 0, 2097157, 27, 0, 2097158, 27, 0, 2097159, 27, 0, 2097160, 27, 0, 2097161, 27, 0, 2097162, 27, 0, 2097163, 27, 0, 2097164, 27, 0, 2097165, 27, 0, 2097166, 27, 0, 2097167, 27, 0, 2097168, 27, 0, 2097169, 27, 0, 2097170, 27, 0, 2097171, 27, 0, 2097172, 27, 0, 2097173, 27, 0, 2097174, 27, 0, 2097175, 27, 0, 2097176, 27, 0, 2097177, 27, 0, 2097178, 27, 0, 2097179, 27, 0, 2097180, 27, 0, 2097181, 27, 0, 2097182, 27, 0, 2097183, 27, 0, 2097184, 27, 0, 2097185, 27, 0, 2097186, 27, 0, 2097187, 27, 0, 2097188, 27, 0, 2097189, 27, 0, 2097190, 27, 0, 2097191, 27, 0, 2097192, 27, 0, 2097193, 27, 0, 2097194, 27, 0, 2097195, 27, 0, 2097196, 27, 0, 2097197, 27, 0, 2097198, 27, 0, 2097199, 27, 0, 2097200, 27, 0, 2097201, 27, 0, 2097202, 27, 0, 2097203, 27, 0, 2097204, 27, 0, 2097205, 27, 0, 2097206, 27, 0, 2097207, 27, 0, 2097208, 27, 0, 2097209, 27, 0, 2097210, 27, 0, 2097211, 27, 0, 2097212, 27, 0, 2097213, 27, 0, 2097214, 27, 0, 2097215, 27, 0, 2097216, 27, 0, 2097217, 27, 0, 2097218, 27, 0, 2097219, 27, 0, 2097220, 27, 0, 2097221, 27, 0, 2097222, 27, 0, 2097223, 27, 0, 2097224, 27, 0, 2097225, 27, 0, 2097226, 27, 0, 2097227, 27, 0, 2097228, 27, 0, 2097229, 27, 0, 2097230, 27, 0, 2097231, 27, 0, 2097232, 27, 0, 2097233, 27, 0, 2097234, 27, 0, 2097235, 27, 0, 2097236, 27, 0, 2097237, 27, 0, 2097238, 27, 0, 2097239, 27, 0, 2097240, 27, 0, 2097241, 27, 0, 2097242, 27, 0, 2097243, 27, 0, 2097244, 27, 0, 2097245, 27, 0, 2097246, 27, 0, 2097247, 27, 0, 2097248, 27, 0, 2097249, 27, 0, 2097250, 27, 0, 2097251, 27, 0, 2097252, 27, 0, 2097253, 27, 0, 2097254, 27, 0, 2097255, 27, 0, 2097256, 27, 0, 2097257, 27, 0, 2097258, 27, 0, 2097259, 27, 0, 2097260, 27, 0, 2162688, 27, 0, 2162689, 27, 0, 2162690, 27, 0, 2162691, 27, 0, 2162692, 27, 0, 2162693, 27, 0, 2162694, 27, 0, 2162695, 27, 0, 2162696, 27, 0, 2162697, 27, 0, 2162698, 27, 0, 2162699, 27, 0, 2162700, 27, 0, 2162701, 27, 0, 2162702, 27, 0, 2162703, 27, 0, 2162704, 27, 0, 2162705, 27, 0, 2162706, 27, 0, 2162707, 27, 0, 2162708, 27, 0, 2162709, 27, 0, 2162710, 27, 0, 2162711, 27, 0, 2162712, 27, 0, 2162713, 27, 0, 2162714, 27, 0, 2162715, 27, 0, 2162716, 27, 0, 2162717, 27, 0, 2162718, 27, 0, 2162719, 27, 0, 2162720, 27, 0, 2162721, 27, 0, 2162722, 27, 0, 2162723, 27, 0, 2162724, 27, 0, 2162725, 27, 0, 2162726, 27, 0, 2162727, 27, 0, 2162728, 27, 0, 2162729, 27, 0, 2162730, 27, 0, 2162731, 27, 0, 2162732, 27, 0, 2162733, 27, 0, 2162734, 27, 0, 2162735, 27, 0, 2162736, 27, 0, 2162737, 27, 0, 2162738, 27, 0, 2162739, 27, 0, 2162740, 27, 0, 2162741, 27, 0, 2162742, 27, 0, 2162743, 27, 0, 2162744, 27, 0, 2162745, 27, 0, 2162746, 27, 0, 2162747, 27, 0, 2162748, 27, 0, 2162749, 27, 0, 2162750, 27, 0, 2162751, 27, 0, 2162752, 27, 0, 2162753, 27, 0, 2162754, 27, 0, 2162755, 27, 0, 2162756, 27, 0, 2162757, 27, 0, 2162758, 27, 0, 2162759, 27, 0, 2162760, 27, 0, 2162761, 27, 0, 2162762, 27, 0, 2162763, 27, 0, 2162764, 27, 0, 2162765, 27, 0, 2162766, 27, 0, 2162767, 27, 0, 2162768, 27, 0, 2162769, 27, 0, 2162770, 27, 0, 2162771, 27, 0, 2162772, 27, 0, 2162773, 27, 0, 2162774, 27, 0, 2162775, 27, 0, 2162776, 27, 0, 2162777, 27, 0, 2162778, 27, 0, 2162779, 27, 0, 2162780, 27, 0, 2162781, 27, 0, 2162782, 27, 0, 2162783, 27, 0, 2162784, 27, 0, 2162785, 27, 0, 2162786, 27, 0, 2162787, 27, 0, 2162788, 27, 0, 2162789, 27, 0, 2162790, 27, 0, 2162791, 27, 0, 2162792, 27, 0, 2162793, 27, 0, 2162794, 27, 0, 2162795, 27, 0, 2162796, 27, 0, 2228224, 27, 0, 2228225, 27, 0, 2228226, 27, 0, 2228227, 27, 0, 2228228, 27, 0, 2228229, 27, 0, 2228230, 27, 0, 2228231, 27, 0, 2228232, 27, 0, 2228233, 27, 0, 2228234, 27, 0, 2228235, 27, 0, 2228236, 27, 0, 2228237, 27, 0, 2228238, 27, 0, 2228239, 27, 0, 2228240, 27, 0, 2228241, 27, 0, 2228242, 27, 0, 2228243, 27, 0, 2228244, 27, 0, 2228245, 27, 0, 2228246, 27, 0, 2228247, 27, 0, 2228248, 27, 0, 2228249, 27, 0, 2228250, 27, 0, 2228251, 27, 0, 2228252, 27, 0, 2228253, 27, 0, 2228254, 27, 0, 2228255, 27, 0, 2228256, 27, 0, 2228257, 27, 0, 2228258, 27, 0, 2228259, 27, 0, 2228260, 27, 0, 2228261, 27, 0, 2228262, 27, 0, 2228263, 27, 0, 2228264, 27, 0, 2228265, 27, 0, 2228266, 27, 0, 2228267, 27, 0, 2228268, 27, 0, 2228269, 27, 0, 2228270, 27, 0, 2228271, 27, 0, 2228272, 27, 0, 2228273, 27, 0, 2228274, 27, 0, 2228275, 27, 0, 2228276, 27, 0, 2228277, 27, 0, 2228278, 27, 0, 2228279, 27, 0, 2228280, 27, 0, 2228281, 27, 0, 2228282, 27, 0, 2228283, 27, 0, 2228284, 27, 0, 2228285, 27, 0, 2228286, 27, 0, 2228287, 27, 0, 2228288, 27, 0, 2228289, 27, 0, 2228290, 27, 0, 2228291, 27, 0, 2228292, 27, 0, 2228293, 27, 0, 2228294, 27, 0, 2228295, 27, 0, 2228296, 27, 0, 2228297, 27, 0, 2228298, 27, 0, 2228299, 27, 0, 2228300, 27, 0, 2228301, 27, 0, 2228302, 27, 0, 2228303, 27, 0, 2228304, 27, 0, 2228305, 27, 0, 2228306, 27, 0, 2228307, 27, 0, 2228308, 27, 0, 2228309, 27, 0, 2228310, 27, 0, 2228311, 27, 0, 2228312, 27, 0, 2228313, 27, 0, 2228314, 27, 0, 2228315, 27, 0, 2228316, 27, 0, 2228317, 27, 0, 2228318, 27, 0, 2228319, 27, 0, 2228320, 27, 0, 2228321, 27, 0, 2228322, 27, 0, 2228323, 27, 0, 2228324, 27, 0, 2228325, 27, 0, 2228326, 27, 0, 2228327, 27, 0, 2228328, 27, 0, 2228329, 27, 0, 2228330, 27, 0, 2228331, 27, 0, 2228332, 27, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="GrassAndStone_top" type="TileMap" parent="Plattforms"]
modulate = Color( 0.519531, 0.519531, 0.519531, 1 )
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 8 )
format = 1
tile_data = PoolIntArray( 3211265, 0, 0, 3211266, 0, 0, 3211267, 0, 0, 3211268, 0, 0, 3211269, 0, 0, 3211270, 0, 0, 3211271, 0, 0, 3211272, 0, 0, 3211273, 0, 0, 3211274, 0, 0, 3211275, 0, 0, 3211276, 0, 0, 3211277, 0, 0, 3211278, 0, 0, 3211279, 0, 0, 3211280, 0, 0, 3211281, 0, 0, 3211282, 0, 0, 3211283, 0, 0, 3211284, 0, 0, 3211285, 0, 0, 3211286, 0, 0, 3211287, 0, 0, 3211288, 0, 0, 3211289, 0, 0, 3211290, 0, 0, 3211291, 0, 0, 3211292, 0, 0, 3211293, 0, 0, 3211294, 0, 0, 3211295, 0, 0, 3211296, 0, 0, 3211297, 0, 0, 3211298, 0, 0, 3211299, 0, 0, 3211300, 0, 0, 3211301, 0, 0, 3211302, 0, 0, 3211303, 0, 0, 3211304, 0, 0, 3211305, 0, 0, 3211306, 0, 0, 3211307, 0, 0, 3211308, 0, 0, 3211309, 0, 0, 3211310, 0, 0, 3211311, 0, 0, 3211312, 0, 0, 3211313, 0, 0, 3211314, 0, 0, 3211315, 0, 0, 3211316, 0, 0, 3211317, 0, 0, 3211318, 1, 0, 3211319, 1, 0, 3211320, 1, 0, 3211321, 1, 0, 3211322, 2, 0, 3211323, 2, 0, 3211324, 2, 0, 3211325, 2, 0, 3211326, 2, 0, 3211327, 2, 0, 3211328, 2, 0, 3211329, 2, 0, 3211330, 1, 0, 3211331, 1, 0, 3211332, 1, 0, 3211333, 1, 0, 3211334, 1, 0, 3211335, 1, 0, 3211336, 1, 0, 3211337, 1, 0, 3211338, 1, 0, 3211339, 1, 0, 3211340, 1, 0, 3211341, 1, 0, 3211342, 1, 0, 3211343, 1, 0, 3211344, 1, 0, 3211345, 1, 0, 3211346, 1, 0, 3211347, 1, 0, 3211348, 1, 0, 3211349, 1, 0, 3211350, 1, 0, 3211351, 1, 0, 3211352, 1, 0, 3211353, 1, 0, 3211354, 1, 0, 3211355, 1, 0, 3211356, 1, 0, 3211357, 1, 0, 3211358, 1, 0, 3211359, 1, 0, 3211360, 1, 0, 3211361, 1, 0, 3211362, 1, 0, 3211363, 1, 0, 3211364, 1, 0, 3211365, 1, 0, 3211366, 1, 0, 3211367, 1, 0, 3211368, 1, 0, 3211369, 1, 0, 3211370, 1, 0, 3211371, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 8 )]
editor/display_folded = true
modulate = Color( 0.570313, 0.570313, 0.570313, 1 )
position = Vector2( 48, 768 )
z_index = 2

[node name="Interface" parent="Player" index="0"]
editor/display_folded = false

[node name="Camera2D" parent="Player/KinematicBody2D" index="4"]
limit_left = 26
limit_right = 1720

[node name="OldMan" parent="." instance=ExtResource( 9 )]
modulate = Color( 0.589844, 0.589844, 0.589844, 1 )
position = Vector2( 1147.97, 786.324 )
script = ExtResource( 10 )

[node name="Area2D" type="Area2D" parent="OldMan"]
editor/display_folded = true
visible = false
scale = Vector2( 1.25, 1.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OldMan/Area2D"]
position = Vector2( -1.7643e-005, 1.85966e-005 )
scale = Vector2( 1.96923, 1.96923 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PopupDialog" parent="OldMan" instance=ExtResource( 11 )]
editor/display_folded = true

[node name="NextLevelArea" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 1728, 752 )
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextLevelArea"]
position = Vector2( 4.47035e-005, -7.99998 )
scale = Vector2( 1.23077, 5.53846 )
shape = SubResource( 2 )

[connection signal="body_entered" from="OldMan/Area2D" to="OldMan" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="OldMan/Area2D" to="OldMan" method="_on_Area2D_body_exited"]
[connection signal="pressed" from="OldMan/PopupDialog/PopupDialog/PanelContainer/MarginContainer/HBoxContainer/NextButton" to="OldMan" method="_on_NextButton_pressed"]
[connection signal="body_entered" from="NextLevelArea" to="NextLevelArea" method="_on_NextLevelArea_body_entered"]

[editable path="Player"]

[editable path="Player/Interface"]

[editable path="OldMan/PopupDialog"]
